# spel

./: .gitignore  Cargo.toml  README.md  american.txt
.github/workflows/: test.yml
src/: main.rs  util.rs
