[package]
name = "spel"
version = "0.2.6"
edition = "2021"
repository = "https://github.com/crustymonkey/spel"
license = "GPL-2.0-or-later"
homepage = "https://github.com/crustymonkey/spel"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4", features=["derive"] }
log = "0.4"
chrono = "0.4"
anyhow = "1"
difflib = "0.4"

[profile.dev]
overflow-checks = true
